[package]
name = "error_hook"
version = "0.2.2"
edition = "2021"
authors = ["MitamaLab <mitama@mitama.tech>"]
description = "error hook"
repository = "https://github.com/LoliGothick/error_hook"
license = "ISC"

[features]
default = []
attribute = []

[dependencies]
anyhow = { workspace = true }
error_hook_attr = "0.1.1"
thiserror = "1.0.38"

[dev-dependencies]
test-case = "3.0.0"
