[package]
name = "error_hook"
version = "0.2.3"
edition = "2021"
authors = ["MitamaLab <mitama@mitama.tech>"]
description = "error hook"
repository = "https://github.com/LoliGothick/error_hook"
license = "ISC"

[features]
default = []
attribute = []

[dependencies]
anyhow = { workspace = true }
error_hook_attr = "0.1.2"
thiserror = "1.0.39"

[dev-dependencies]
test-case = "3.3.1"
