[package]
name = "error_hook_attr"
version = "0.1.2"
edition = "2021"
authors = ["MitamaLab <mitama@mitama.tech>"]
description = "error hook"
repository = "https://github.com/LoliGothick/error_hook"
license = "ISC"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.109", features = ["full"] }
