[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
error_hook = { path = "../error_hook", features = ["attribute"] }
tokio = "1.26.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
